--- a/templates/admin/manage_users.html
+++ b/templates/admin/manage_users.html
@@ -21,6 +21,11 @@
                     <a href="{{ url_for('toggle_user', user_id=user.id) }}" class="btn btn-sm btn-warning">
                         Toggle {{ 'Deactivate' if user.status == 'active' else 'Activate' }}
                     </a>
+                    <a href="{{ url_for('reset_user_password', user_id=user.id) }}" 
+                       class="btn btn-sm btn-info" 
+                       onclick="return confirm('Are you sure you want to reset the password for {{ user.fullname }}? The password will be reset to: password123')">
+                        Reset Password
+                    </a>
                 </td>
             </tr>
         {% endfor %}
