--- a/templates/admin/admin_base.html
+++ b/templates/admin/admin_base.html
@@ -100,7 +100,7 @@
                 </a>
             </li>
             <li class="nav-item mt-5">
-                <a class="nav-link text-danger" href="{{ url_for('logout') }}">
+                <a class="nav-link text-danger" href="{{ url_for('admin_logout') }}">
                     <i class="fas fa-sign-out-alt me-3"></i> Logout
                 </a>
             </li>
