--- a/templates/customer/cart.html
+++ b/templates/customer/cart.html
@@ -44,7 +44,12 @@
                                 </form>
                             </td>
                             <td class="align-middle"><strong style="font-size: 1.1rem; color: #1a56db;">₱{{ item.subtotal }}</strong></td>
-                            <td class="align-middle"><a href="{{ url_for('update_cart', product_id=item.product.id) }}?quantity=0" class="btn btn-sm btn-danger">Remove</a></td>
+                            <td class="align-middle">
+                                <form method="post" action="{{ url_for('update_cart', product_id=item.product.id) }}" class="d-inline">
+                                    <input type="hidden" name="quantity" value="0">
+                                    <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                                </form>
+                            </td>
                         </tr>
                     {% endfor %}
                 </tbody>
